<?xml version="1.0"?>
<package format="2">
  <name>isaac_cv_ros</name>
  <version>0.0.0</version>
  <description>ROS interface to connect and stream pointclouds and images from an isaac sim environment, using the ROS bridge extension.</description>

  <maintainer email="michbaum@student.ethz.ch">Michael Baumgartner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>std_srvs</depend>
  
  <export>

  </export>
</package>
